UNRELEASED  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.0
	* SUBSYSTEM VERSIONS:
		* qrpc: 0.1.0
		* q_tut: 0.3.0
		* q_vvx: 0.2.0
	* PACKAGE VERSIONS:
		* qrpc-devel: 0.2.0
		* qrpc-prod: 0.1.0
	Add pkgconf to qrpc-devel so pkg-config is available for openssl-sys builds.
	Added q_vvx_worker with per-speaker queue support.
	Generate voicevox_core models.json with jq from VVM manifests at install time.
	Renamed q_vvx super_simple_tts RPC to synthesize.
	Removed q_vvx_engine config and module.
	Generate voicevox main.json from models.json at install time.


2025-12-25  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.1.0
	* SUBSYSTEM VERSIONS:
		* qrpc: 0.1.0
		* q_tut: 0.3.0
		* q_vvx: 0.1.0
	* PACKAGE VERSIONS:
		* qrpc-devel: 0.1.0
		* qrpc-prod: 0.1.0
	Initial setup.