@@ -6,3 +6,78 @@ Size (voicevox_core/download-linux-x64) = 8562088 bytes
 BLAKE2s (voicevox_core/open_jtalk_dic_utf_8-1.11.tar.gz) = 960772f1bde63b9b6d05e5638e9d3d556bd615513920569e8bcf16dccd4eec09
 SHA512 (voicevox_core/open_jtalk_dic_utf_8-1.11.tar.gz) = ce52f6064a2103c28184f3e1d47438c339deb15bab52d21615f86f10007c9da29e2fd3ed7b7d21a6095bcc44c7569e07f1bc9d41d1d925fced13d8ce742f8f71
 Size (voicevox_core/open_jtalk_dic_utf_8-1.11.tar.gz) = 23643819 bytes
+BLAKE2s (voicevox_core/0.vvm) = c5c0f0982141ef071d4e9c3242ca0331896553eb2646ec30c092a7e62d8c7eb9
+SHA512 (voicevox_core/0.vvm) = 75bc24b99d1606d458a2d65c699ac84ccab596107bd4700ef7c72ebd802c0eb54a734416c045e4b987218af5aa812dd2626d5683b6e8034d1d0ff3863025d22c
+Size (voicevox_core/0.vvm) = 58214379 bytes
+BLAKE2s (voicevox_core/1.vvm) = 7c094f9abb01002ebc41c56d5ffdda5dda3c4b509f155c08c1ad62f869b62588
+SHA512 (voicevox_core/1.vvm) = 839626382e065828446c2f31f3f9e968756ebb8db10f9b424796d46d18f77b8aad3972f435ae11ca6acb56a68b4661fb703b5dbb4937ba63018bff0e74b8deb7
+Size (voicevox_core/1.vvm) = 59477413 bytes
+BLAKE2s (voicevox_core/2.vvm) = 5098678b71eb992f8bd20126aa17f0ef024d0040ccf6a4bf639bf4abc69ded3f
+SHA512 (voicevox_core/2.vvm) = d3973bae36bd53f7dea57e22d8dabf6c15cac851cadc9a463e0791939718ad6bca1932e52997aebebdb3811411262e8711fd4b0c075693567a009d00199b9aa0
+Size (voicevox_core/2.vvm) = 58214778 bytes
+BLAKE2s (voicevox_core/3.vvm) = 60a00bdb9929e3659499c1801505796e897e5a4f9b3399d850d6bd4748a6ae64
+SHA512 (voicevox_core/3.vvm) = fd1064096e584ea8f64af4d7ec5806002fd0a6a47dfe372d19c1ad10a2e6fa37bfdade7fdf03f8ffd1403c42daf796382c80c6364c74670d25894bb1a3eb6860
+Size (voicevox_core/3.vvm) = 61730024 bytes
+BLAKE2s (voicevox_core/4.vvm) = 1ad766d5b0cb610409496cb253905cbcdc870c2347ef8ddf9857f979273d9202
+SHA512 (voicevox_core/4.vvm) = 90121da8d8d732932b4f55b9ab42ebd1a2ed7ef4aa47bf77a7bbdb2b509e19a19ca576772d372111648d81dd3ec603772ade85cc967c5d765437eeaf44a7e2f5
+Size (voicevox_core/4.vvm) = 58211265 bytes
+BLAKE2s (voicevox_core/5.vvm) = 09701a6adae3698f1b243263b21cf7d88e639b930237ce9e97e8a28c760f8759
+SHA512 (voicevox_core/5.vvm) = 51a001b986a3d65b182445f067d46713ff5c26d81294566512e92f8359bef23aceb0a22f6b1f6fafc0662db85affe85f5ebde4ef627e3e55b6dab7cef9ee7bb0
+Size (voicevox_core/5.vvm) = 56517330 bytes
+BLAKE2s (voicevox_core/6.vvm) = 1f4982fc6dd1efdc836d44a18cb9911d7f9478ee4a4cf90c53a7c64205afde3c
+SHA512 (voicevox_core/6.vvm) = c0137ca025ff6bd1b23437d52f8a0cd2a1220470f9f0cdb1c4be8a53c87ff8553f1c156647c512e3cf7aad3a98fc16db4dff8a6e36cb396f7095e2883104657d
+Size (voicevox_core/6.vvm) = 58211181 bytes
+BLAKE2s (voicevox_core/7.vvm) = c274875f2461cd64a50f49e38459b2f0bda80e1d24d2cc05ca47e674f4f02050
+SHA512 (voicevox_core/7.vvm) = 799100dae6c8ba25098c995a7ccd7bcc32ddcd85a786a40f7c38dbcee9be600e0dd755f0b21668aa58916d9592c3b4653b1d072f4634b1c5cc0a98b189e22207
+Size (voicevox_core/7.vvm) = 57232459 bytes
+BLAKE2s (voicevox_core/8.vvm) = 9e4da39f404aed1a9067dedca303dac59f33c6bf8a208d7f4a7b0d3911835b87
+SHA512 (voicevox_core/8.vvm) = 866f78a2d4622d881b49c3e40881bd1ddfbc1f647cb0f6ab1480b51bca4d061353ca4f0c2b332e726c0b5693bbcf895395064865c793c36a1d3e9152b1b0211a
+Size (voicevox_core/8.vvm) = 58210984 bytes
+BLAKE2s (voicevox_core/9.vvm) = eff8b45bdc4f60d3a577b78388ebfc7ab6954742f36fa27ac91d9925f93a7158
+SHA512 (voicevox_core/9.vvm) = 04497d053b7191971dfa576fc1cf0228b720c8b5e88f9a1effba9110951e34f32347f97ef260120a2c118ea29191704e839957ca465b60a6fcb140270927cc23
+Size (voicevox_core/9.vvm) = 57235017 bytes
+BLAKE2s (voicevox_core/10.vvm) = abd80952ca8639610f31218827c1688c656c337aaa862d624ff8ee607c7f931b
+SHA512 (voicevox_core/10.vvm) = 4e699d3c2506b9bfe8e3724ba5e134ef3cd6534b8ffde5d28cbd15532582cb91fe6ce7cc659693fb6ca5fb9bf0234dec1c71b8d16cde0a57915a77e0afe5b9f6
+Size (voicevox_core/10.vvm) = 57235185 bytes
+BLAKE2s (voicevox_core/11.vvm) = 664d68f5895aad6428ec2bf8679a80b8bee35d9d2c7d1524eba203838de526e5
+SHA512 (voicevox_core/11.vvm) = fb1c52576e7faba82464c53151f6e2bfb773a9f42cac1236ee8e579ba8e32df3e208e7fc813cdccf1a68a3079fcf165c376f965084785788a38a99e8f9e2f189
+Size (voicevox_core/11.vvm) = 60231796 bytes
+BLAKE2s (voicevox_core/12.vvm) = 0d59dd28311faf983704303eed1410d1d198ed034dda5ac78d8da6622704701b
+SHA512 (voicevox_core/12.vvm) = b24746098de8c7ebb8801366da543f176895515b6ea49e177147185828d2d0c31ca83a06df7eee126f35f19cb764d27ecbce96de851cce89cf80194b8be57286
+Size (voicevox_core/12.vvm) = 58213390 bytes
+BLAKE2s (voicevox_core/13.vvm) = b171e8397b6bcc43fece1e203be94de7dd810b0b1241fa4c13130f0051bc9c7c
+SHA512 (voicevox_core/13.vvm) = 750dc2c72a325fca37dead8ac3bebe4ef07a04784ba1f9f9a0823fb51918d8ac9791c2829a4a635eef2c1d759febc5d4a765bec1b7fe256290f81ca7282cf7a1
+Size (voicevox_core/13.vvm) = 60231935 bytes
+BLAKE2s (voicevox_core/14.vvm) = 6a98bfbcf11216d91136721d92c534eeb3cfcbc8ba76464f262c94543b7d9e8d
+SHA512 (voicevox_core/14.vvm) = 7ed47acd99175eff9826a1c9906fe97dd9aae585085dc2e1acb1a86d36f92606d14e18be24efed1bfbb5dd97dfbe3d85f2fe560940ca10bbf8690d3202dce756
+Size (voicevox_core/14.vvm) = 64664926 bytes
+BLAKE2s (voicevox_core/15.vvm) = 5658fb224d80d6e07920fa4141aa32f5b4dc4ca0d69e392403d7ffe118a76e2e
+SHA512 (voicevox_core/15.vvm) = 85f2c1b96105f281e03b2ecf18025f5f539c03037b4a5630645853a635406a86b6bfff032a86024ae1676a97c86bdb49b4c2d97729ae3979a9c5031eba17533f
+Size (voicevox_core/15.vvm) = 65647574 bytes
+BLAKE2s (voicevox_core/16.vvm) = aaa20dca9c21e614ca3de84753ee5f018c196fa3987f83a9673f380c5845aa9d
+SHA512 (voicevox_core/16.vvm) = 2a3845c7820fda2f54a56576d4697a36643fe21258f136f01046f19fc73b0a8b94f6534714d402e1deaa3e7cde2e255c305f6562fcacd07945c164f66f3d6ffc
+Size (voicevox_core/16.vvm) = 58212115 bytes
+BLAKE2s (voicevox_core/17.vvm) = e9a65e26dc97d36cd2f07dc88e744ef9125495226fbaf6d740879eb465c301e2
+SHA512 (voicevox_core/17.vvm) = e07f1e550f58ad64786e1d25aca2d2889adaab29552b2db4cd4e78b596cfeb5cb6e25fb0357a4b050230c7874ba661c19c9ff41fab6d43f01f9076974cbe8f4b
+Size (voicevox_core/17.vvm) = 58212482 bytes
+BLAKE2s (voicevox_core/18.vvm) = 78df2cfa93fe54d3ea3dfc952aa51ff345712d29c27252ff993cc016d751e55d
+SHA512 (voicevox_core/18.vvm) = 516947310a2e16e9b1ae7a67513e4430a6a7d2b5907beb51754aaf17d16ebc50336be306b85a4834fe92fb767d627e119a827d8b6a854f00234c968670ca3742
+Size (voicevox_core/18.vvm) = 61399262 bytes
+BLAKE2s (voicevox_core/19.vvm) = c44087113748a087edcc3cd8cfdd5942ef4bb72fa8e59a466de8a1da9125a2bd
+SHA512 (voicevox_core/19.vvm) = cfb99a8d9ed0bbc8d30b6ab4649bfddb8458e1f58e0157e7daafff666648325ce2c4c080c89b375e1dc713fba7596402fbc1c0b215b0bebf9c54f99c5c803539
+Size (voicevox_core/19.vvm) = 59022148 bytes
+BLAKE2s (voicevox_core/20.vvm) = 5aa2b75d8b654d7d95b19e58aee25fd714aaf645dead455e94fc6b05fa0a3e6b
+SHA512 (voicevox_core/20.vvm) = 0e44b4b7d40f4b5b68412ee61b8df99b063e1de686b2e3b125dfe7d05461872f7fd9662ec2222f97bfb720edda0e1ee45105e38a14f45aa58eeb91ca8db01596
+Size (voicevox_core/20.vvm) = 59535608 bytes
+BLAKE2s (voicevox_core/21.vvm) = d95694e43079443e609fe4101d473f2e8f161ee239f8b9b5df6c66e31b2fb0ee
+SHA512 (voicevox_core/21.vvm) = a2cbcf0271736a60d3abfc1d177a480ba234120ea60577db82073e21a0c68298ebd78b1dbbb2294e1e51367302a58a941e4cf84e039d567327f101519147296f
+Size (voicevox_core/21.vvm) = 62075160 bytes
+BLAKE2s (voicevox_core/s0.vvm) = 83d5e18ddb6783cfeff7316c18ba470b52dcf556a37ab98001b0c5215d2fc404
+SHA512 (voicevox_core/s0.vvm) = cd8ffd281020f35a7ff5c854b117caae54775b1115570c3cc2e3b35a612624a15add24a9173f338f7c0f5338c0c0a58522e18903700166bef05038df74fe37db
+Size (voicevox_core/s0.vvm) = 130412508 bytes
+BLAKE2s (voicevox_core/README.txt) = 590f55c1bc7d4920bf8492464f061e1bc05a1cb11f1c6cf46d21359f304e9dbf
+SHA512 (voicevox_core/README.txt) = 7cae1ee2aeb456c4c57430a168c107b9c7cc609199589f5413de5629519ce0ecc836964abb4bd98f4edb05bc2786fd0a4c4c210b353bf4e48a4dd34b8ffef290
+Size (voicevox_core/README.txt) = 24338 bytes
+BLAKE2s (voicevox_core/TERMS.txt) = baf0ddd97e83095a14dd34a2925e1ea5fc5fba0767cfae235e06da6c49be94a7
+SHA512 (voicevox_core/TERMS.txt) = e3820b37bb4d3a8ce3a2be9da1cf376e6756fa76b0e8e3673cdf1bc553cadc7c974c40f6e876413dde3eb16a82103a9abda6ca099005d6dd3893474514c0435c
+Size (voicevox_core/TERMS.txt) = 14108 bytes
